# oaknorth-alerts-service-question

./: Dockerfile  Makefile  README.md  docker-compose.yml  notes.txt  pyproject.toml
alerts_service/: app.py  db.py  models.py  rest.py  settings.py  types.py
tests/: conftest.py  test_rest.py
